# Impetus

./: CMakeLists.txt
include/glad/: glad.h
src/: engine.c  engine.cpp  engine.h  glad.c  main.c  main.cpp
